--- a/tex/riesz.tex
+++ b/tex/riesz.tex
@@ -236,11 +236,11 @@ Porém antes, uma definição:
     Defina em \( J \), então, as funções
     \begin{align*}
         f_{ 1 }(x)
-        = \varphi_{ t_{ 1 }, n }(x) + \sum_{ k=2 }^{ m } f(t_{ k }) \left(
+        &= \varphi_{ t_{ 1 }, n }(x) + \sum_{ k=2 }^{ m } f(t_{ k }) \left(
             \varphi_{ t_{ k }, n }(x) - \varphi_{ t_{ k-1 }n }(x)
         \right) \\
         f_{ 2 }(x)
-        = f(t_{ 1 }) \chi_{ [t_{ 0 }, t_{ 1 }] }(x) +
+        &= f(t_{ 1 }) \chi_{ [t_{ 0 }, t_{ 1 }] }(x) +
         \sum_{ k=2 }^{ m } f(t_{ k }) \chi_{ (t_{ k-1 }, t_{ k }] }(x)
     .\end{align*}
     Perceba que \( f_{ 1 } \in C(J) \) e que \( f_{ 2 } \) é uma função escada em \( J \).
